# pycord-next

./: .pre-commit-config.yaml  CHANGELOG-NEXT.md  CHANGELOG.md  README.md  README.rst  pyproject.toml  renovate.json
.github/actions/sync-uv/: action.yml
.github/workflows/: docs-checks.yml  docs-localization-download.yml  docs-localization-upload.yml  lib-checks.yml  pr-checks.yml  release.yml  sync-guild-features.yml  todo-checks.yml
discord/: __init__.py  abc.py  activity.py  appinfo.py  asset.py  audit_logs.py  automod.py  bot.py  channel.py  client.py  cog.py  collectibles.py  components.py  datetime.py  embeds.py  emoji.py  enums.py  errors.py  flags.py  gateway.py  guild.py  http.py  incidents.py  integrations.py  interactions.py  invite.py  iterators.py  member.py  message.py  monetization.py  object.py  onboarding.py  partial_emoji.py  permissions.py  poll.py  primary_guild.py  raw_models.py  role.py  scheduled_events.py  shard.py  (+10 more)
discord/app/: cache.py  event_emitter.py  state.py
discord/channel/: __init__.py  base.py  category.py  channel.py.old  dm.py  forum.py  media.py  news.py  partial.py  stage.py  text.py  thread.py  voice.py
discord/commands/: context.py  core.py  options.py
discord/events/: __init__.py  audit_log.py  automod.py  channel.py  entitlement.py  gateway.py  guild.py  integration.py  interaction.py  invite.py  message.py  scheduled_event.py  soundboard.py  stage_instance.py  subscription.py  thread.py  typing.py  voice.py  webhook.py
discord/ext/bridge/: core.py
discord/ext/commands/: context.py  converter.py  cooldowns.py  core.py  errors.py  flags.py  help.py
discord/ext/tasks/: __init__.py
discord/gears/: __init__.py  gear.py
discord/types/: channel.py  guild.py  interactions.py  member.py  message.py
discord/ui/: container.py  label.py  modal.py  section.py  select.py  view.py
discord/utils/: __init__.py  annotations.py  hybridmethod.py  private.py  public.py
discord/webhook/: async_.py  sync.py
docs/: conf.py  faq.rst
docs/api/: abcs.rst  application_commands.rst  clients.rst  data_classes.rst  enums.rst  events.rst  gears.rst  index.rst  models.rst  utils.rst
docs/ext/commands/: api.rst
docs/locales/de/LC_MESSAGES/api/: enums.po
docs/locales/en/LC_MESSAGES/api/: enums.po
docs/locales/fr/LC_MESSAGES/api/: enums.po
docs/locales/ru/LC_MESSAGES/api/: enums.po
docs/locales/zh_CN/LC_MESSAGES/api/: enums.po
examples/: background_task.py  soundboard.py  timeout.py
examples/app_commands/: info.py  slash_autocomplete.py  slash_basic.py
tests/: event_helpers.py  fixtures.py  test_basic_bot.py  test_emojis_mapping.py  test_find_util.py  test_format_dt.py  test_markdown_utils.py  test_snowflake_datetime.py
tests/events/: __init__.py  test_events_channel.py  test_events_guild.py  test_events_soundboard.py  test_events_thread.py
tests/integration/: __init__.py  test_event_listeners.py
