[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "py-cord"
authors = [
    {name = "Pycord Development"}
]
description = "A Python wrapper for the Discord API"
readme = {content-type = "text/markdown", file = "README.md"}
requires-python = ">=3.10,<3.14"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
#    "License-Expression :: MIT",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "aiohttp>=3.6.0,<4.0",
    "colorlog~=6.10.1",
    "typing-extensions>=4,<5",
]

[project.urls]
Homepage = "https://pycord.dev"
Changelog = "https://docs.pycord.dev/en/master/changelog.html"
Source = "https://github.com/Pycord-Development/pycord"
Documentation = "https://docs.pycord.dev"
Tracker = "https://github.com/Pycord-Development/pycord/issues"
Funding = "https://patreon.com/pycord"

[project.optional-dependencies]
voice = [
    "pynacl>=1.6.1,<1.7",
]
speed = [
    "aiohttp[speedups]>=3.11.18",
    "msgspec~=0.20.0",
]

[dependency-groups]
docs = [
    "furo==2025.12.19",
    "levenshtein==0.27.3",
    "myst-parser[linkify]==4.0.1",
    "sphinx==8.2.3",
    "sphinx-autodoc-typehints==2.5.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-intl==2.3.2",
    "sphinxcontrib-trio==1.1.2",
    "sphinxcontrib-websupport==2.0.0",
    "sphinxext-opengraph==0.13.0",
    "typing-extensions==4.15.0",
]
dev = [
    "codespell==2.4.1",
    "coverage~=7.8",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.12",
    "tox>=4.27.0",
    "tox-gh>=1.5.0",
    "tox-uv>=1.26.1",
    "ty>=0.0.7",
]

test = [# Not in `dev` because we use tox for testing. Tox will install these dependencies.
    "pytest~=8.4.2",
    "pytest-asyncio~=1.3.0",
]
ci = [
    "pygithub>=2.7.0",
]

[tool.uv.dependency-groups]
docs = {requires-python = ">=3.11,<3.14" }

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "discord/_version.py"

[tool.hatch.build.targets.wheel]
only-packages = true
packages = ["discord"]
only-include = ["discord", "README.rst", "LICENSE", "pyproject.toml", "discord/bin/*.dll", "discord/emojis.json", "discord/ibanner.txt", "discord/banner.txt", "discord/chan/ART.txt",]

[tool.hatch.build.targets.sdist]
only-packages = true
packages = ["discord"]
only-include = ["discord", "README.rst", "LICENSE", "pyproject.toml", "discord/bin/*.dll", "discord/emojis.json", "discord/ibanner.txt", "discord/banner.txt", "discord/chan/ART.txt",]

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
exclude = [
    "discord/_version.py"
]

[tool.ruff.lint]
select = ["ALL"]
exclude = [
    "tests/**",
    "scripts/**",
    "docs/**",
    "examples/**",
]

# When ignoring a rule globally, please consider if it can be ignored in a more specific way.
# Also, leave a comment explaining why the rule is ignored.
extend-ignore = [

    # Needs discussion
    "ANN202",  # Private function typing
    "ANN204",  # dunder method missing return type
    "D",  # Missing docstring (if it doesnt end up being ignored, "D203" conflicts with formatter)
    "INP001",  # Missing __init__.py file
    "E501",  # Line too long
    # "F401",  # unused imports  - should be ignored on a file/line-level
    # "FBT001", "FBT002"  # Boolean-typed positional argument in function definition
    "N801",  # class naming convention
    "N803",  # uppercase function parameters
    "PLR2004",  # magic numbers
    "PLW0602", "PLW0603",  # global usage
    "PTH",  # file manipulation without pathlib
    "SIM115",  # built-in open() usage without context manager
    # "ASYNC230",  # built-in open() used in async function (aiofiles?)
    "RUF001",  # String contains ambiguous char - only an issue because of ext.commands 
    "S307",  # eval() usage
    "S603",  # subprocess.Popen() usage - sinks
    "T201",  # print() usage - logging?
    "TC001",  # move imports to TYPE_CHECKING block if they are only used for typing (even if no circular import)
    "PLC0105",  # convariant TypeVar naming
    "RUF005",
    # "RUF006",  # weakreferenced asyncio tasks and futures



    "PERF401",  # Do not recommend list comprehension instead of for loop & append()
    "N804",  # ruff issue - https://github.com/astral-sh/ruff/issues/6017
    "TRY301",  # raise inside try block
    "SIM108",  # Do not recommend single-line tenerary expressions
    "SIM105",  # Do not recommend contextlib.suppress() instead of try-except-pass (context manager is slower)
    "ARG",  # Unused arguments
    "ANN002", "ANN003",  # *args and **kwargs missing type annotations
    "TC006",  # Do not require quotes in typing.cast()
    "PERF203",  # try-except inside loop
    "S311",  # random.Random usage
    "S110",  # try-except-pass without logging it
    "N818",  # Exception subclass prefix is not "Error"
    "N811",  # Constant imported as non-constant (ruff false positive)
    "N807", # Function name should not start and end with `__` (dunder)
    "FBT003",  # Boolean passed to function call as positional argument
    "PLC0415",  # Allow non top-level imports in some files
    "PLW1641",  # Object does not implement `__hash__` method
    "ANN401",  # typing.Any usage
    "EM101", "EM102", "EM103",  # exception formatting - f strings, str.format, etc
    "COM812",  # Missing trailing comma
    "N806",  # Uppercase variable names
    "BLE001",  # Catch (Base)Exception
    "TRY002",  # Allow raising Exception()
    "TRY003",  # Passing args to Exceptions
    "RUF013",  # import not at top level
    "PLR6301",  # Unused self 
    "RET501",  # Implicit return None
    "RET502",  # return statement without explicit value
    "RET503",  # Implicit return None
    "CPY",  # Missing copyright notice
    "TD002",  # TO_DO comment without author assigned
    "TD003",  # TO_DO commend without issue link
    "FIX002",  # Existence of TO_DO comments
    "SLF001",  # sunder / dunder access from outside of the class
    "ERA001",  # Commented out code
    "C901",  # Complex function
    "ASYNC109",  # async function has 'timeout' kwarg
    "E731",  # lambda assigned to variable
    "F403", "F405",  # * import usage
    "RSE102",  # Redundant parentheses when raising exceptions
    "TC003",  # Do not move stdlib imports to TYPE_CHECKING block
    "TID252",  # Allow relative imports

    "PLR0904",  # Too many public methods on class 
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments
    "PLR0914",  # Too many local variables
    "PLR0915",  # Too many statements
    "PLR0916",  # Too many booleans inside single if statement
    "PLR0917",  # Too many positional arguments
]

[tool.ty.environment]
python-platform = "all"
python-version = "3.10"

[tool.ty.rules]
unresolved-attribute = "warn"
invalid-argument-type = "warn"
invalid-parameter-default = "warn"
invalid-assignment = "warn"
invalid-method-override = "warn"
call-non-callable = "warn"
invalid-return-type = "warn"
invalid-await = "warn"
not-iterable = "warn"
invalid-type-form = "warn"
no-matching-overload = "warn"
unsupported-operator = "warn"
invalid-key = "warn"
invalid-type-arguments = "warn"
missing-argument = "warn"
invalid-overload = "warn"
non-subscriptable = "warn"
invalid-super-argument = "warn"
parameter-already-assigned = "warn"
unknown-argument = "warn"
too-many-positional-arguments = "warn"
unresolved-import = "warn"
missing-typed-dict-key = "warn"

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.tox]
requires = ["tox>=4"]
env_list = ["3.13", "3.12", "3.11", "3.10"]

[tool.tox.env_run_base]
description = "run unit tests"
commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]
dependency_groups = ["test"]

# GitHub actions
[tool.tox.gh.python]
"3.13" = ["3.13"]
"3.12" = ["3.12"]
"3.11" = ["3.11"]
"3.10" = ["3.10"]
